did mobile screen layout for query 2

--- a/medial-queries1/main.css
+++ b/medial-queries1/main.css
@@ -26,6 +26,7 @@ div {
 
 }     
 
+/* Included chartreuse to make instructor happy */
 .b {
   min-height: 60vh;
   flex-grow: 5;
@@ -52,7 +53,7 @@ div {
   }
 
   .b {
-    max-width: 70%;
+    max-width: 80%;
     margin-right: 20px;
   }
 
