--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -78,7 +78,42 @@ in the section. */
 COMPUTER SIZING HERE
 *******************************************/
 @media (min-width: 600px) {
+  .container {
+    flex-flow: row wrap;
+  }
 
+  .a {
+    width: 100%;
+    height: 25vh;
+  }
 
+  .b {
+    max-width: 70%;
+    height: 25vh;
+    margin-right: 10px;
+  }
 
+  .section {
+    width: 100%;
+    order: 5;
+    flex-flow: row wrap;
+    align-items: flex-end;
+    
+  }
+
+  #break {
+    flex-basis: 100%;
+    height: 10vh;
+  }
+
+  .f {
+    max-width: 30%;
+    height: 70vh;
+    
+    
+  }
+
+  
+
+  
 }
