--- a/medial-queries3/main.css
+++ b/medial-queries3/main.css
@@ -88,3 +88,38 @@ know if it matters though. */
   border: 5px solid chartreuse;
   
 }
+
+/*******************************************
+COMPUTER SIZING HERE
+*******************************************/
+@media (min-width: 600px) {
+  /* Switched to rows for the PC layout. */
+  .container {
+    flex-flow: row wrap;
+  }
+  
+  /* a takes up a whole row space again because
+  it's greedy */
+  .a {
+    width: 100%;
+    height: 25vh;
+  }  
+
+ /* Since one section is a grouping of rows, I
+  made those stick together. Ordered the section
+  as 5 so they'd go after the f. */
+  .section, .section2 {
+    width: 30%;
+    flex-flow: row wrap;
+    align-content: flex-start;
+    
+  }
+
+  .h {
+    max-width: 35%;
+    height: 70vh;
+    
+    
+  }
+
+}
