--- a/medial-queries3/main.css
+++ b/medial-queries3/main.css
@@ -1,125 +1,89 @@
+
+/* Border helpers! */
 * {
   border: 1px solid rgb(86, 40, 117);
+  box-sizing: border-box;
 }
-
 
 /* Carried the same general format over from queries 1-2 */
 body {
   background: peachpuff;
+  margin: 0;
   text-align: center;
-  padding: 5px 5px;
-  margin: 5px 5px;
   font-family: sans-serif;
   font-size: 2em;
 }
 
-/* Adds space in between each letter div. */
-div {
-  margin: 5px 0px;
-}
-
-/* Need to make the container a flexbox.
- I used column wrap to start again. 
- I kept the height/justify
- from the last media query since it looked fine. */
- .container {
+  /* Need to make the container a flexbox.
+   I used column wrap to start again. 
+   I kept the height/justify
+   from the last media query since it looked fine. 
+   Padding and gap needed to be switched to .5em to look better.*/
+.container {
   display: flex;
-  flex-flow: column wrap;
-  min-height: 100vh;
-  justify-content: space-around;
-
+  flex-direction: column;
+  justify-content: space-between;
+  padding: .5em;
+  gap: .5em;
+  height: 100vh;
 }
 
-/* Adjusted a. It's aboue the same height as the last
-a, so I just copied it all over. 
-Added chartreuse again for instructor's
-benefit. */
+/* Adjusted a. Mostly copied a over from query 2 except now a needed
+a width of 100%.
+Added chartreuse again for instructor's benefit. */
 .a {
-  min-height: 15vh;
-  flex-grow: 1;
-  background-color: rgb(221, 147, 193);
-  border: 5px solid chartreuse;
-  
-}
-
-/* Did infline-flex for rows. Added a gap to have spacing
-in between the items. Set margin to 0 to override to the
-div margins because otherwise there is some extra spacing
-in the section. */
-.section {
-  display: inline-flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  margin: 0px;
-}
-
-/* These are the same sizes throughout. */
-.b, .c, .d{
-  min-height: 15vh;
-  min-width: 15vh;
+  width: 100%;
   flex-grow: 1;
   background-color: rgb(221, 147, 193);
   border: 5px solid chartreuse;
 }
 
-/* Keeping the lower three paired together. I don't
-know if it matters though. */
-.section2 {
-  display: inline-flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  margin: 0px;
-}
-
-/* These are the same sizes throughout. */
-.e, .f, .g {
-  min-height: 15vh;
-  min-width: 15vh;
-  flex-grow: 1;
-  background-color: rgb(221, 147, 193);
-  border: 5px solid chartreuse;
-}
-
-/* h seemed to be about 3 times the height of a. */
-.h {
-  min-height: 45vh;
+.wrapper {
   flex-grow: 3;
-  background-color: rgb(221, 147, 193);
-  border: 5px solid chartreuse;
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: .5em;
 }
 
-/*******************************************
-COMPUTER SIZING HERE
-*******************************************/
+.row {
+  height: 50%;
+  display: flex;
+  justify-content: space-between;
+  gap: .5em;
+}
+
+ /* These are the same sizes throughout. */
+.b, .c, .d, .e, .f, .g {
+  width: 30%;
+  background-color: rgb(221, 147, 193);
+  border: 5px solid chartreuse;
+}
+
+  /* h seemed to be about 3 times the height of a. */
+.h {
+  flex-grow: 5;
+  background-color: rgb(221, 147, 193);
+  border: 5px solid chartreuse;
+}
+
+ /*******************************************
+  COMPUTER SIZING HERE
+  *******************************************/
 @media (min-width: 600px) {
-  /* Switched to rows for the PC layout. */
+  /* Switching to rows for PC layout */
   .container {
     flex-flow: row wrap;
   }
-  
-  /* a takes up a whole row space again because
-  it's greedy */
+
   .a {
-    width: 100%;
-    height: 25vh;
-  }  
-
- /* Since one section is a grouping of rows, I
-  made those stick together. Ordered the section
-  as 5 so they'd go after the f. */
-  .section, .section2 {
-    width: 30%;
-    flex-flow: row wrap;
-    align-content: flex-start;
-    
+    height: 30%;
   }
 
-  .h {
-    max-width: 35%;
-    height: 70vh;
-    
-    
+  .wrapper {
+    height: 70%;
+    width: 75%;
   }
+
 
 }
