--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,3 +1,8 @@
+/* Everything got a little small on here compared to query 1 and 3...
+I would like to fix this, but I've spent so much time trying to wrangle
+queries 2 and 3, and this is all I have in me right now. 
+Maybe I'll look back at this later. */
+
 /* Border helper! */
 
 * {
